# llm-skill

./: .gitignore  Agent.md  CLAUDE.md  example_simple.py  hello.py  litellm_config.yaml  main.py  pyproject.toml  react_agent.py
.claude/agents/: data-analysis.md
src/: skills.py  tool.py
src/agent/: callbacks.py  graph.py  prompts.py  state.py
src/agent/middleware/: bash.py  skill.py
src/agent/subagent/: __init__.py  data_analysis.py
src/cli/: __init__.py  callbacks.py  runner.py
src/store/: conversation_store.py  database.py
src/utils/: litellm_hooks.py  logger.py
