[project]
name = "llm-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.14.0",
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "openinference-instrumentation-langchain>=0.1.56",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prompt-toolkit>=3.0.52",
]
