[project]
name = "llm-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.14.0",
    "claude-agent-sdk>=0.1.0",
    "dotenv>=0.9.9",
    "litellm[proxy]>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prompt-toolkit>=3.0.52",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.46",
]
